# py-admin-detect

./: .gitignore  README.md  pyproject.toml
admin_detector/: __init__.py
examples/: demo.py
src/: Adminr.py
src/admin_detector/: cli.py  core.py  exceptions.py
tests/: test_core.py
