[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "admin-detector"
version = "1.0.0"
description = "Cross-platform admin/root privilege detector for Python"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"

# 以下部分仅在您想使用 pip install -e . 本地安装时才需要，
# 本仓库不提供 pip 安装方式，因此注释掉。
# [project.scripts]
# admin-check = "admin_detector.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["admin_detector*"]